--- a/style.css
+++ b/style.css
@@ -14,19 +14,44 @@ color: rgb(43, 10, 0);
 body{
     background-color: rgb(29, 29, 29);
 }
-footer {
-    background-color: rgb(58, 57, 57);
-    height: 50px;
-    position: fixed;
-}
+
 h2 {
 color: rgb(43, 10, 0);
+font-family: 'Open Sans', sans-serif;
+
 }
 h4 {
     color: rgb(83, 20, 1);
+    font-family: 'Open Sans', sans-serif;
+}
+h3 {
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(73, 73, 73);
 }
 
+p {
+    font-family: 'Open Sans', sans-serif;
+}
 .row{
     margin-right: 0px;
     margin-left: 0px;
+}
+.col-sm-4 {
+    background-color: rgb(65, 65, 65);
+    box-shadow: 0px 0px 2px rgb(255, 255, 255);
+}
+footer {
+    background-color: rgb(58, 57, 57);
+    color: white;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.meow-1{
+    height: 225px;
+    box-shadow: 0px 0px 3px white;
+    background-color: rgb(12, 12, 12);
+    margin-top: 13px;
+    margin-bottom: 30px;
 }
